# scx-code-agent

./: .code-agent.yaml.example  .env.example  .gitignore  .mcp.json  .scx-code-agent.yaml.example  CLAUDE.md  README.md  architecture.md  cli.py  config.py  formatter.py  git_utils.py  github_client.py  llm_client.py  mcp_server.py  pyproject.toml
.github/workflows/: ci.yml
.wiki/: README.md  ai-context.md  architecture.md  graph.md  memory.md  nodes.md  prompts.md  risks.md  tools.md  workflows.md
agent/: graph.py  state.py
agent/nodes/: arch_expert.py  base_expert.py  coordinator.py  perf_expert.py  reporter.py  sec_expert.py
prompts/: architecture.md  base.md  performance.md  security.md
tests/: conftest.py  test_cli.py  test_config.py  test_e2e.py  test_git_utils.py  test_github_client.py  test_graph.py  test_llm_client.py  test_mcp_server.py
tests/fixtures/llm_responses/: arch_expert_issue.json  malformed.json  perf_expert_issue.json  sec_expert_issue.json
tests/test_nodes/: __init__.py  test_arch_expert.py  test_base_expert.py  test_coordinator.py  test_perf_expert.py  test_reporter.py  test_sec_expert.py
